# bazel-js-example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json
src/: index.js  lib.js
src/node/: BUILD.bazel
src/npm_package/: BUILD.bazel  license.txt  package.json
src/rollup/: BUILD.bazel
src/rollup_bundle/: BUILD.bazel  index.js  lib.js
tools/: bazel.rc
